--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,5 +7,36 @@
 @layer base{
   html{
     font-family: 'Raleway', sans-serif;
+  }
+}
+.Home{
+  display: flex;
+}
+.home-text{
+  width: 250px;
+}
+.home-image{
+  flex: 1;
+  width: 50%;
+}
+
+@layer components{
+  .max-container{
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+}
+@layer utilities{ 
+  .padding-x{
+    @apply sm:px-16 px-8;
+  }
+  .padding-l{
+    @apply sm:pl-16 pl-8;
+  }
+  .padding-r{
+    @apply sm:pr-16 pr-8;
+  }
+  .padding-b{
+    @apply sm:pb-24 pb-12
   }
 }
